# vision_control

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  macros.py  mkdocs.yml  nginx.conf  plugins.json  pyproject.toml
docs/: extra.css  index.md
docs/grafana/: exporting.md  gallery.md  resources.md  setup.md  transformations.md  tricks.md
docs/middleware/: adapters.md  api.md  architecture.md  datasource.md  deployment.md  mocking.md  payload.md  running.md  setup.md  tools.md
docs/miscellaneous/: django-shared-objects.md  improvements.md  loki.md
tools/config/: Caddyfile
tools/config/grafana/dashboards/: dashboard.json
tools/config/grafana/provisioning/dashboards/: dashboards.yml
tools/config/grafana/provisioning/datasources/: datasource.yml
tools/config/loki/: config.yaml
tools/config/prometheus/: prometheus.yml
tools/scripts/: demo.py  fake_transactions_sentry.py  loki.py  plugins.py  readability.py  sentryspoof.py  test_fail_report.py
vision_control/: .coveragerc  Dockerfile  manage.py
vision_control/api/: apps.py  services.py  urls.py  utils.py  views.py
vision_control/api/adapters/: gitlab.py  vision_control.py
vision_control/api/grafana_json_datasource/: __init__.py  datasource.py  exceptions.py  types.py
vision_control/api/tests/: test_adapters.py  test_datasource.py  test_utils.py
vision_control/hooks/: __init__.py  apps.py  urls.py  views.py
vision_control/vision_control/: asgi.py  urls.py  wsgi.py
vision_control/vision_control/settings/: base.py  development.py
